[package]
name = "ccache_stats_reader"
version = "0.1.1" # Update also in src/lib.rs
authors = ["Kent Fredric <kentnl@gentoo.org>"]
edition = "2018"
description = "A read-only API for CCACHE_DIR"
license = "Artistic-1.0 OR GPL-2.0-or-later"
repository = "https://github.com/kentnl-rust/ccache_stats_reader.git"
exclude = ["/target/doc/**", "/.gitignore", "/.cargo/**", "/util/**"]
keywords = ["ccache" ]
categories = []
readme = "src/lib.md"

[features]
default  = []
nightly = ["external_doc", "non_exhaustive"]
external_doc = []
non_exhaustive = []

[dependencies.chrono]
# 0.2.23 is the minimum version I can get compiling on 1.31.0
# 0.4.0 is the first version that ships the ::Utc struct/trait
version = ">= 0.4.0"

[package.metadata.docs.rs]
features = [ "nightly" ]

[lib]
name = "ccache_stats_reader"
path = "src/lib.rs"
test = true
doctest = true
doc = true
