[package]
name = "ccache_stats_reader_extras"
version = "0.1.0" # Update also in src/lib.rs
authors = ["Kent Fredric <kentnl@gentoo.org>"]
edition = "2018"
description = "Extras (examples, tests, etc) for ccache_stats_reader"
license = "Artistic-1.0 OR GPL-2.0-or-later"
repository = "https://github.com/kentnl-rust/ccache_stats_reader_extras.git"
exclude = ["/target/doc/**", "/.gitignore", "/.cargo/**", "/util/**"]
keywords = ["ccache", "examples" ]
categories = []

[features]
default  = []
nightly = ["ccache_stats_reader/nightly"]

[dependencies.ccache_stats_reader]
version = "0.1"

[package.metadata.docs.rs]
features = [ "nightly" ]
